# c3g-sam

./: LICENSE  README.md  pyproject.toml
assets/: scannet_2dseg_scene_splits.json
c3gsam_results/form1/: loss:feature.csv  loss:rgb_lpips.csv  loss:rgb_mse.csv  loss:seg.csv  loss:total.csv
c3gsam_results/form2/: c3gsam:loss_feat.csv  c3gsam:loss_featmag.csv  c3gsam:loss_total.csv  val_loss:feat.csv  val_loss:featmag.csv
c3gsam_results/seg_results/: manifest.json
config/: main.yaml
config/dataset/: lerf_mask_eval.yaml  replica_2dseg.yaml  replica_distill.yaml  replica_pose.yaml  replica_semseg.yaml  scannet_2dseg.yaml  scannet_distill.yaml
config/evaluation/: c3g_sam_distill.yaml  lerf_mask.yaml
config/training/: feature_head_sam.yaml  feature_head_sam_precomputed.yaml  feature_head_sam_precomputed_smoke.yaml  feature_head_sam_prompted.yaml  feature_head_sam_prompted_scannet.yaml  feature_head_sam_prompted_scannet_smoke.yaml
docs/: 01-overview.md  02-getting-started.md  03-architecture.md  04-configuration.md  05-datasets.md  06-models.md  07-training.md  08-evaluation.md  09-reading-guide.md  10-walkthroughs.md  11-glossary.md  12-c3g-sam.md  README.md  arch-details.md  distillation_training.md  prompted_training.md  prompted_training_modal.md
scripts/: download_lerf_mask.sh  precompute_sam_features.py  run_local.sh  run_modal.sh
src/: config.py  eval_lerf_mask.py  eval_pose.py  main.py
src/dataset/: __init__.py  data_module.py  dataset_lerf_mask.py  dataset_re10k.py  dataset_replica.py  dataset_replica_2dseg.py  dataset_replica_distill.py  dataset_replica_semseg.py  dataset_scannet.py  dataset_scannet_2dseg.py  dataset_scannet_distill.py  dataset_scannet_pose.py  download_replica.py  download_scannet.py  lerf_mask_io.py  scannet_2dseg_splits.py  types.py  utils.py
src/evaluation/: eval_common.py  evaluation_index_generator.py  lerf_mask_metrics.py  mask_export.py  mask_metrics.py  metric_computer.py  metrics.py  pose_evaluator.py  score_masks.py
src/geometry/: camera_emb.py  projection.py  ptc_geometry.py
src/loss/: __init__.py  loss_lpips.py  loss_mse.py  loss_point.py  loss_segmentation.py  loss_segmentation_prompted.py  loss_ss.py  loss_ssim.py
src/misc/: cam_utils.py  frame_layout.py  image_io.py  modal_run.py  sam_features.py  sh_rotation.py  utils.py  weight_modify.py
src/modal/: common.py  eval_masks.py  get_scores.py  launch.py  precompute.py  (+1 more)
(+113 files in other folders)
