[project]
name = "c3g"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beartype==0.21.0",
    "clip @ git+https://github.com/openai/CLIP.git@dcba3cb2e2827b402d2701e7e1c7d9fed8a20ef1",
    "colorama==0.4.6",
    "colorspacious==1.1.2",
    "dacite==1.9.2",
    "e3nn==0.5.6",
    "einops==0.6.1",
    "fastapi==0.118.0",
    "ftfy==6.3.1",
    "huggingface-hub==0.34.1",
    "hydra-core==1.3.2",
    "imageio==2.37.0",
    "jaxtyping==0.3.2",
    "lightning==2.5.1.post0",
    "lpips==0.1.4",
    "matplotlib==3.10.6",
    "modal",
    "moviepy==2.2.1",
    "ninja==1.11.1.4",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "opencv-python==4.11.0.86",
    "pandas==2.3.3",
    "pillow==11.0.0",
    "plyfile==1.1.2",
    "pytorch-lightning==2.5.5",
    "regex==2025.7.34",
    "scikit-image==0.25.2",
    "scikit-learn>=1.4.2",
    "scikit-video==1.1.11",
    "scipy==1.16.2",
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
    "setuptools<70",
    "sympy>=1.13.3",
    "tabulate==0.9.0",
    "timm==1.0.21",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchmetrics==1.8.2",
    "torchvision==0.22.1",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "wandb>=0.22.3",
]

[tool.uv]
build-constraint-dependencies = ["setuptools<70"]
extra-build-dependencies = { clip = ["wheel"] }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "I"]
ignore = ["F722"] # Ignore F722 for jaxtyping compatibility.

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

[dependency-groups]
dev = [
    "hypothesis>=6.153.2",
    "pytest>=9.0.3",
]

